# tvc-v1

./: .gitignore  README.md  benchmark.py  fix_indent.py  fix_indent2.py  fix_metrics.py  pyproject.toml  refactor.py  refactor2.py  refactor3.py  requirements.txt
assets/: tvc_2d.xml  tvc_3d.xml
configs/: README.md  aggressive_rocket.yaml  comparison.yaml  default.yaml  development.yaml  evolution_only.yaml  gimbal3d.yaml  heavy_payload.yaml  high_performance.yaml  large_rocket.yaml  ppo_only.yaml  precision_landing.yaml  production_comprehensive.yaml  quick_test.yaml  real_world_comprehensive.yaml  safety_focused.yaml  small_rocket.yaml  windy_environment.yaml
scripts/: evaluate.py  test_system.py  train.py
src/: evaluation.py
src/control/: __init__.py  lqr.py  mpc.py  safety.py
src/dynamics/: __init__.py  plant.py
src/learning/: __init__.py  evolution.py  networks.py  ppo.py
src/simulation/: __init__.py  mujoco_env.py
src/tvc/: __init__.py  __main__.py  curriculum.json  curriculum.py  dynamics.py  env.py  evaluate.py  mpc.py  policies.py  runtime.py  training.py
src/utils/: __init__.py  advanced_tracking.py  comprehensive_evaluation.py  config.py  curriculum_learning.py  metrics.py  simulation_optimizer.py  training_scenarios.py  vectorized_env.py  visualization.py
tests/: test_dynamics.py  test_training.py
