[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tvc-controller"
version = "0.1.0"
description = "Advanced 2D TVC controller with MPC, PPO, and evolutionary curriculum over MuJoCo MJX"
authors = [
  { name = "Research Lab" }
]
requires-python = ">=3.10"
dependencies = [
  "mujoco>=3.3.6",
  "jax~=0.7.1",
  "jaxlib~=0.7.1",
  "flax>=0.11.0",
  "optax>=0.2.4",
  "rlax>=5.1.0",
  "chex>=0.1.89",
  "numpy>=2.3.3",
  "absl-py>=2.1.0",
  "tqdm>=4.66.5",
  "warp-lang>=1.9.0",
  "mujoco-mjx>=3.3.6",
  "matplotlib>=3.9.2"
]

[project.optional-dependencies]
gpu = [
  "jax-cuda12-plugin[with-cuda]~=0.7.2 ; platform_system == 'Linux'",
  "jax-cuda12-pjrt~=0.7.2 ; platform_system == 'Linux'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
